# blogWeb

./: .gitattributes  .gitignore  Agents.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.yaml  findings.md  go.mod  go.sum  main.go  main_test.go  notice.html  progress.md  task_plan.md  面试总结.html
client/: index.html  package-lock.json  package.json  vite.config.js
client/scripts/: check-dev-proxy.mjs  check-i18n.mjs  check-ui-completeness.mjs
client/src/: App.jsx  main.jsx  styles.css
config/: config.go
docs/: backup-restore.md  mcp-client.md  mcp-security-test.md  security-test.md
internal/app/: bootstrap.go
internal/compat/: golden_test.go
internal/handler/: admin.go  http.go  http_test.go  presentation.go
internal/mcp/: audit.go  auth.go  (+16 more)
migrations/: 001_init.sql  002_mcp.sql  003_comments.sql  004_reader_interactions.sql  005_email_registration.sql  006_role_permissions.sql
src/: admin_auth.rs  admin_permissions.rs  admin_read.rs  admin_users.rs  admin_write.rs  app.rs  config.rs  db.rs  email.rs  error.rs  http_interactions.rs  http_public.rs  lib.rs  main.rs  mcp.rs  renderer.rs  session.rs  sqlite_sync.rs
stitch_current_snapshot/: get_project.raw.json  list_screens.raw.json  screens.summary.json
templates/: _base.html  article.html  category.html  index.html
tests/: admin_auth.rs  admin_read.rs  admin_users.rs  admin_write.rs  cli_db.rs  config_compat.rs  db_migration.rs  email_registration.rs  http_health.rs  mcp.rs  public_articles.rs  public_interactions.rs  public_pages_static.rs  renderer.rs  sqlite_sync.rs  support.rs
(+115 files in other folders)
