[package]
name = "blogweb-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "blogweb"
path = "src/lib.rs"

[[bin]]
name = "blogweb"
path = "src/main.rs"

[dependencies]
ammonia = "4"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
